--- a/lib/src/main/res/values/strings.xml
+++ b/lib/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">lib</string>
+    <string name="file_does_not_exist">File %s does not exist.</string>
 </resources>
